--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": "5.3.3"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
     "@metafoks/eslint-config": "1.1.0",
@@ -56,6 +57,9 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.ts"
+    ],
+    "setupFiles": [
+      "<rootDir>/test/setup.ts"
     ],
     "coveragePathIgnorePatterns": [
       "node_modules",
