--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@metafoks/logger": "2.0.0",
     "@metafoks/config-reader": "1.0.2",
-    "@metafoks/context": "1.0.0",
+    "@metafoks/context": "1.0.1",
     "@metafoks/toolbox": "1.0.1",
     "typescript": "5.3.3"
   },
@@ -27,15 +27,16 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@metafoks/jest-config": "1.0.1",
     "@metafoks/eslint-config": "1.1.0",
     "@metafoks/prettier": "1.1.0",
     "@types/jest": "29.4.0",
     "@types/node": "^20.11.10",
     "eslint": "8.56.0",
     "eslint-plugin-jest": "^27.4.3",
-    "jest": "29.4.3",
     "prettier": "3.2.4",
-    "ts-jest": "29.0.5"
+    "jest": "29.7.0",
+    "ts-jest": "29.1.2"
   },
   "prettier": "@metafoks/prettier",
   "eslintConfig": {
@@ -50,34 +51,6 @@
     ]
   },
   "jest": {
-    "collectCoverage": true,
-    "coverageReporters": [
-      "html",
-      "json"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.ts"
-    ],
-    "setupFiles": [
-      "<rootDir>/test/setup.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "node_modules",
-      "<rootDir>/src/index.ts",
-      ".mock.ts"
-    ],
-    "coverageDirectory": "<rootDir>/coverage/",
-    "testRegex": "(/test/.*\\.(test|spec))\\.(jsx?|tsx?|ts|js)$",
-    "transform": {
-      "^.+\\.(t|j)sx?$": "ts-jest"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json",
-      "node",
-      "jsx",
-      "tsx"
-    ]
+    "preset": "@metafoks/jest-config"
   }
 }
