--- a/package.json
+++ b/package.json
@@ -16,25 +16,26 @@
   "author": "Yakov Foks <notafoks@yandex.ru>",
   "license": "MIT",
   "dependencies": {
-    "@metafoks/logger": "2.0.1",
     "@metafoks/config-reader": "1.0.2",
     "@metafoks/context": "1.0.3",
-    "@metafoks/toolbox": "1.0.1"
+    "@metafoks/logger": "2.0.1",
+    "@metafoks/toolbox": "1.0.1",
+    "glob": "^10.3.12"
   },
   "scripts": {
     "build": "tsc",
     "test": "jest"
   },
   "devDependencies": {
-    "@metafoks/jest-config": "1.0.1",
     "@metafoks/eslint-config": "1.1.0",
+    "@metafoks/jest-config": "1.0.1",
     "@metafoks/prettier": "1.1.0",
     "@types/jest": "29.4.0",
     "@types/node": "^20.11.10",
     "eslint": "8.56.0",
     "eslint-plugin-jest": "^27.4.3",
-    "prettier": "3.2.4",
     "jest": "29.7.0",
+    "prettier": "3.2.4",
     "ts-jest": "29.1.2",
     "typescript": "5.4.4"
   },
